@@ -1,5 +1,8 @@
 package io.sentry.event;
 
+import java.util.HashMap;
+import java.util.Map;
+
 /**
  * Builder to assist with the creation of {@link User}s.
  */
@@ -8,6 +11,7 @@ public class UserBuilder {
     private String username;
     private String ipAddress;
     private String email;
+    private Map<String, Object> data;
 
     /**
      * Sets the Id for the user.
@@ -54,11 +58,38 @@ public class UserBuilder {
     }
 
     /**
+     * Sets the extra data for the user.
+     *
+     * @param value Map of extra data
+     * @return current instance of UserBuilder
+     */
+    public UserBuilder setData(Map<String, Object> value) {
+        this.data = value;
+        return this;
+    }
+
+    /**
+     * Adds to the extra data for the user.
+     *
+     * @param name Name of the data
+     * @param value Value of the data
+     * @return current instance of UserBuilder
+     */
+    public UserBuilder withData(String name, Object value) {
+        if (this.data == null) {
+            this.data = new HashMap<>();
+        }
+
+        this.data.put(name, value);
+        return this;
+    }
+
+    /**
      * Build and return the {@link User} object.
      *
      * @return User
      */
     public User build() {
-        return new User(id, username, ipAddress, email);
+        return new User(id, username, ipAddress, email, data);
     }
 }
